--- a/BAITAP/index.html
+++ b/BAITAP/index.html
@@ -13,6 +13,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <style>
+        @media only screen and (max-width: 1200) {   
+}
+@media only screen and (max-width: 900) {   
+}
+@media only screen and (max-width: 750) {   
+}
         *{
             font-family: 'Noto Serif', serif;        }
 body{
