--- a/BAITAP/index2.html
+++ b/BAITAP/index2.html
@@ -40,7 +40,7 @@
         </div>
      </div>
    </div>
-    <h1 class="v" style="margin-top: 20px; color: #009688; font-size: 30px; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"><center>Chào Mừng Tới Gou Gou Shop!</center></h1>
+    <h1 class="v" style="margin-top: 20px; color: #42746f; font-size: 30px; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"><center>Chào Mừng Tới Gou Gou Shop!</center></h1>
     <div class="row">
       <div class="col-12">
     <div id="carouselExampleControls" class="crs" data-ride="carousel">
@@ -211,7 +211,7 @@
                 <b>Cách Huấn Luyện Chó Săn.</b>
                 </a>
               </h6>
-            <h7 style="font-size: 13px; color: rgb(66, 128, 86);">Các bài tập đi, đứng, nằm, ngồi, nhặt đồ… sẽ xây dựng được mối liên kết giữa chó và chủ nuôi. Chó học được cách nghe mệnh lệnh và chấp hành ... <a href="#">Xem tiếp</a> </h7>
+            <h7 style="font-size: 13px; color: rgb(66, 128, 86);">Các bài tập đi, đứng, nằm, ngồi, nhặt đồ… sẽ xây dựng được mối liên kết giữa chó và chủ nuô ... <a href="#">Xem tiếp</a> </h7>
           </div>
         </div>
       </div>
