--- a/BAITAP/index.html
+++ b/BAITAP/index.html
@@ -13,6 +13,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <style>
+        
         @media only screen and (max-width: 1200) {   
 }
 @media only screen and (max-width: 900) {   
@@ -23,16 +24,17 @@
             font-family: 'Noto Serif', serif;        }
 body{
     background: url(p1.jpg);
+    width: 100%;
     background-size: cover;
     background-position-y: -80px;
     font-size: 16px;
 }
 .login{
     width: 500px;
-    height:300px;
+    height: 300px;
     border: 1px solid pink;
     margin-top: 200px;
-    margin-left: 550px;
+    margin-left: 550px;  
     background: pink;
     justify-content: center;
     border-radius: 10px;
