--- a/baitap.js/baitap5.html
+++ b/baitap.js/baitap5.html
@@ -11,7 +11,7 @@
       let Year =  +prompt("Nhập vào số năm bạn muốn")
       let Month = +prompt("Nhập vào số tháng bạn muốn")
       let Day = +prompt("Nhập vào số ngày bạn muốn")
-      let total = Day + "-" + Month + "-" + Year
+      let total = `${Day}-${Month}-${Year}`
       alert(total)
 
 
