--- a/Javascript/demo.html
+++ b/Javascript/demo.html
@@ -7,6 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="demo.js"></script>
+    <script>
+    switch (browser) {
+        case 'Edge':
+            alert("You've got the Edge!");
+            break;
+        case 'Chrome':
+        case 'Firefox':
+        case 'Safari':
+        case 'Opera':
+            alert('Okay we support these browsers too');
+            break;
+        default:
+            alert('We hope that this page looks ok!');
+    }
+    </script>
 </body>
 </html>
