--- a/Vòng lặp/tam_giac.html
+++ b/Vòng lặp/tam_giac.html
@@ -22,6 +22,17 @@
             document.write(str);
         }
         tamGiac()
+        function Triangle(){
+            let str = "";
+            for (let i = 5 ; i > 0; i++){
+                for (let j = 0; j <=5 ; j++){
+                    str += "*"
+                }
+                str += "<br>";
+            }
+            document.write(str)
+        }
+        Triangle()
     </script>
 </body>
 </html>
