--- a/bt1.html
+++ b/bt1.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <script>
-        function nhietDo(){
-            let a = +prompt("Nhập nhiệt độ hiện tại bạn êy")
-           do { a < 100  }
-           
-           }
-          
+        let a = 0
+        while ( a < 100){
+                a++
+                document.write(a)
+            if (a == 99){
+                alert ("Đã hoàn thành")
+            }
         }
-        nhietDo()
     </script>
 </body>
 </html>
