--- a/Game/index.html
+++ b/Game/index.html
@@ -10,19 +10,25 @@
 <body>
     <canvas id="game" width="1350px" height="630px" style="background-color: rgb(136, 255, 0);"></canvas>
     <script>
-        let game = document.getElementById("game")
+        let a = document.getElementById("game")
         let ball = new Ball();
         function main(){
-            ball.display(game)
-            let ctx = canvas.getContext("2d")
+            let ctx = a.getContext("2d")
             ctx.clearRect(0, 0, game.width, game.height);
+            ball.display(a)
             diChuyenbong()
             requestAnimationFrame(main);
         }
         main()
-        function diChuyenbong(){
-        ball.x += 8;
-        ball.y += 8;
+        function diChuyenbong(){ 
+            if(ball.x < 25 || ball.x > game.width){
+                ball.dx = -ball.dx;
+            }
+            if(ball.y < 20 || ball.y > game.height){
+                ball.dy = -ball.dy;
+            }
+        ball.x += ball.dx;
+        ball.y += ball.dy;
         }
     </script>
 </body>
