--- a/DEMOJS/demo.html
+++ b/DEMOJS/demo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="demo.js"></script>
 </head>
 <body>
     
