--- a/Game/index.html
+++ b/Game/index.html
@@ -8,10 +8,15 @@
     <script src="bricks.js"></script>
     <script src="ball.js"></script>
     <script src="paddle.js"></script>
+    <style>
+        body {
+          background: burlywood ;  
+        }
+    </style>
 </head>
 <body>
     <center>
-    <canvas id="game" width="600px" height="650px" style="background-color: rgb(0, 0, 0);"></canvas>
+    <canvas id="game" width="600px" height="650px" style="background-color: rgb(37, 19, 19);"></canvas>
     <script src="main.js"></script>
     </center>
 </body>
